Examples/2024-02-spectra/result/slither_contracts/PrincipalToken.txt
'forge config --json' running
'/Users/tanzezhong/.solc-select/artifacts/solc-0.8.20/solc-0.8.20 --version' running
'/Users/tanzezhong/.solc-select/artifacts/solc-0.8.20/solc-0.8.20 ds-test/=lib/forge-std/lib/ds-test/src/ erc4626-tests/=lib/openzeppelin-contracts/lib/erc4626-tests/ forge-std/=lib/forge-std/src/ openzeppelin-contracts-upgradeable/=lib/openzeppelin-contracts-upgradeable/contracts/ openzeppelin-contracts/=lib/openzeppelin-contracts/contracts/ openzeppelin-erc20-basic/=lib/openzeppelin-contracts/contracts/token/ERC20/ openzeppelin-erc20-extensions/=lib/openzeppelin-contracts-upgradeable/contracts/token/ERC20/extensions/ openzeppelin-erc20/=lib/openzeppelin-contracts-upgradeable/contracts/token/ERC20/ openzeppelin-math/=lib/openzeppelin-contracts/contracts/utils/math/ openzeppelin-proxy/=lib/openzeppelin-contracts-upgradeable/contracts/proxy/utils/ openzeppelin-utils/=lib/openzeppelin-contracts/contracts/utils/ @openzeppelin/contracts-upgradeable/=lib/openzeppelin-contracts-upgradeable/contracts/ @openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/ /Users/tanzezhong/GPT4Bugs-main/Examples/2024-02-spectra/src/tokens/PrincipalToken.sol --combined-json abi,ast,bin,bin-runtime,srcmap,srcmap-runtime,userdoc,devdoc,hashes --optimize --optimize-runs 200 --evm-version paris --allow-paths .,/Users/tanzezhong/GPT4Bugs-main/Examples/2024-02-spectra/src/tokens' running
Compilation warnings/errors on /Users/tanzezhong/GPT4Bugs-main/Examples/2024-02-spectra/src/tokens/PrincipalToken.sol:
Error: Declaration "IERC20Metadata" not found in "lib/forge-std/src/interfaces/IERC20.sol" (referenced as "../../../../forge-std/src/interfaces/IERC20.sol").
 --> lib/openzeppelin-contracts-upgradeable/contracts/token/ERC20/ERC20Upgradeable.sol:7:1:
  |
7 | import  {IERC20Metadata} from "../../../../forge-std/src/interfaces/IERC20.sol";
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


ERROR:Slither:Unable to compile all targets.
